--- a/src/main/resources/templates/admin/book/add.html
+++ b/src/main/resources/templates/admin/book/add.html
@@ -57,8 +57,16 @@
 									</select>
 								</div>
 								<div class="form-group">
+									<label for="exampleInputEmail1">Giá nhập</label>
+									<input type="number" class="form-control" th:field="*{priceEnter}">
+								</div>
+								<div class="form-group">
+									<label for="exampleInputEmail1">Lợi nhuận</label>
+									<input type="number" class="form-control" th:field="*{profit}">
+								</div>
+								<div class="form-group">
 									<label for="exampleInputEmail1">Sale</label>
-									<input type="text" class="form-control" th:field="*{sale}">
+									<input type="number" class="form-control" th:field="*{sale}">
 								</div>
 								<div class="form-group">
 									<label for="exampleInputFile">Ảnh</label>
