--- a/src/main/resources/templates/admin/fragments/reloadReceipt.html
+++ b/src/main/resources/templates/admin/fragments/reloadReceipt.html
@@ -1,14 +1,13 @@
 <section class="content">
 	<div class="row bg-white pt-2">
-		<div class="col-6">
+		<div class="col-4">
 			<div class="card-body card table-responsive p-0" style="height: 300px;">
 				<table class="table table-head-fixed text-nowrap">
 					<thead>
 						<tr>
 							<th>STT</th>
 							<th>Ảnh</th>
-							<th>Giá</th>
-							<th>Lãi</th>
+							
 							<th>Số lượng</th>
 						</tr>
 					</thead>
@@ -19,13 +18,6 @@
 								<img th:src="@{'/uploads/'+${detail.book.image}}" width="40px">
 							</td>
 
-							<td>
-								<input type="number" class="form-control ipPrice" th:data-id="${detail.id}"
-									th:value="${detail.price}">
-							</td>
-							<td style="width: 20%;">
-								<input type="number" class="form-control ipProfit" th:data-id="${detail.id}" th:value="${detail.profit}">
-							</td>
 							<td style="width: 10%;">
 								<input type="number" class="form-control ipQuantity" th:data-id="${detail.id}" th:value="${detail.quantity}">
 							</td>
@@ -35,7 +27,7 @@
 				</table>
 			</div>
 		</div>
-		<div class="col-6">
+		<div class="col-8">
 			<div class="card-body card table-responsive p-0" style="height: 300px;">
 				<table class="table table-head-fixed text-nowrap">
 					<thead>
@@ -43,7 +35,8 @@
 							<th>STT</th>
 							<th>Ảnh</th>
 							<th>Tên sách</th>
-							<th>Giá</th>
+							<th>Giá nhập</th>
+							<th>Giá bán</th>
 							<th>Tùy chọn</th>
 						</tr>
 					</thead>
@@ -56,8 +49,8 @@
 							<td
 								th:text="${#strings.length(book.bookName) > 12 ? #strings.substring(book.bookName, 0, 12) + '...' : book.bookName}">
 							</td>
-							<td th:text="${book.price}"></td>
-
+							<td th:text="${book.priceEnter}"></td>
+							<td th:text="${book.priceSale}"></td>
 							<td>
 								<button th:id="${book.id}" type="submit"
 									class="btn btn-success add-receipt">Thêm</button>
