--- a/src/main/resources/templates/admin/receipt/add.html
+++ b/src/main/resources/templates/admin/receipt/add.html
@@ -38,15 +38,13 @@
 			<div id="reloadReceipt">
 				<section class="content">
 					<div class="row bg-white pt-2">
-						<div class="col-6">
+						<div class="col-4">
 							<div class="card-body card table-responsive p-0" style="height: 300px;">
 								<table class="table table-head-fixed text-nowrap">
 									<thead>
 										<tr>
 											<th>STT</th>
 											<th>Ảnh</th>
-											<th>Giá</th>
-											<th>Lãi</th>
 											<th>Số lượng</th>
 										</tr>
 									</thead>
@@ -55,15 +53,6 @@
 											<td th:text="${number.count}"></td>
 											<td>
 												<img th:src="@{'/uploads/'+${detail.book.image}}" width="40px">
-											</td>
-
-											<td>
-												<input type="number" class="form-control ipPrice"
-													th:data-id="${detail.id}" th:value="${detail.price}">
-											</td>
-											<td style="width: 20%;">
-												<input type="number" class="form-control ipProfit"
-													th:value="${detail.profit}">
 											</td>
 											<td style="width: 10%;">
 												<input type="number" class="form-control ipQuantity"
@@ -75,7 +64,7 @@
 								</table>
 							</div>
 						</div>
-						<div class="col-6">
+						<div class="col-8">
 							<div class="card-body card table-responsive p-0" style="height: 300px;">
 								<table class="table table-head-fixed text-nowrap">
 									<thead>
@@ -83,7 +72,8 @@
 											<th>STT</th>
 											<th>Ảnh</th>
 											<th>Tên sách</th>
-											<th>Giá</th>
+											<th>Giá nhập</th>
+											<th>Giá bán</th>
 											<th>Tùy chọn</th>
 										</tr>
 									</thead>
@@ -96,8 +86,8 @@
 											<td
 												th:text="${#strings.length(book.bookName) > 12 ? #strings.substring(book.bookName, 0, 12) + '...' : book.bookName}">
 											</td>
-											<td th:text="${book.price}"></td>
-
+											<td th:text="${book.priceEnter}"></td>
+											<td th:text="${book.priceSale}"></td>
 											<td>
 												<button th:id="${book.id}" type="submit"
 													class="btn btn-success add-receipt">Thêm</button>
@@ -253,8 +243,6 @@
 					// Thay đổi nội dung của một phần tử trên trang web bằng nội dung từ view
 					$('#reloadReceipt').html(data);
 					AddRecipt();
-					Change(".ipPrice", ".ipProfit");
-					Change(".ipProfit", ".ipPrice");
 					ChangeQuantity();
 				},
 				error: function (error) {
