--- a/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/src/main/resources/templates/admin/fragments/sidebar.html
@@ -41,6 +41,16 @@
 					
 				</li>
 				<li class="nav-item">
+					<a th:href="@{/admin/account}" class="nav-link">
+						<i class="nav-icon fas fa-chart-pie"></i>
+						<p>
+							Tài khoản
+							<!--<i class="right fas fa-angle-left"></i>-->
+						</p>
+					</a>
+					
+				</li>
+				<li class="nav-item">
 					<a th:href="@{/admin/category}" class="nav-link">
 						<i class="nav-icon fas fa-tachometer-alt"></i>
 						<p>
