--- a/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/src/main/resources/templates/admin/fragments/sidebar.html
@@ -98,6 +98,16 @@
 					</a>
 				</li>
 				<li class="nav-item">
+					<a th:href="@{/admin/discountCode}" class="nav-link">
+						<i class="nav-icon fas fa-copy"></i>
+						<p>
+							Mã giảm giá
+							<!--<i class="fas fa-angle-left right"></i>-->
+							<!--<span class="badge badge-info right">6</span>-->
+						</p>
+					</a>
+				</li>
+				<li class="nav-item">
 					<a th:href="@{/admin/warehouse}" class="nav-link">
 						<i class="nav-icon fas fa-copy"></i>
 						<p>
@@ -122,6 +132,16 @@
 						<i class="nav-icon fas fa-chart-pie"></i>
 						<p>
 							Đơn hàng
+							<!--<i class="right fas fa-angle-left"></i>-->
+						</p>
+					</a>
+					
+				</li>
+				<li class="nav-item">
+					<a th:href="@{/admin/rating}" class="nav-link">
+						<i class="nav-icon fas fa-chart-pie"></i>
+						<p>
+							Đánh giá
 							<!--<i class="right fas fa-angle-left"></i>-->
 						</p>
 					</a>
