--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,8 +33,13 @@
 					<div class="login-title text-center mb-30">
 						<h2>Đăng nhập</h2>
 					</div>
+					<div class="text-center pb-2 ">
+						<span class="text-danger font-weight-bold" th:text="${error}"></span>
+					</div>
+					
 				</div>
 				<div class="offset-lg-3 col-lg-6 col-md-12 col-12">
+					
 					<form class="login-form" th:action="@{/login}" method="post">
 						<div class="single-login">
 							<label>Tên đăng nhập<span>*</span></label>
